--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "files": ["dist", "types"],
+  "files": [ "dist" ],
   "main": "./dist/index.js",
-  "types": "./types/index.d.ts",
-  "exports": {
-    ".": {
-      "main": "./dist/index.js",
-      "types": "./types/index.d.ts"
-    }
-  },
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
   "scripts": {
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -30,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "^3.6.4"
   }
 }
