--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "types": ["node", "vite/client"]
+    "types": ["vite/client"]
   },
   "include": ["vite.config.ts"]
 }
