--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdf-editor",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "type": "module",
   "files": [
     "dist"
@@ -8,6 +8,25 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "module": "./dist/index.js",
+  "keywords": [
+    "react",
+    "pdf",
+    "editor",
+    "pdf.js",
+    "pdf-lib",
+    "form",
+    "entry form",
+    "canvas",
+    "react-component"
+  ],
+  "author": {
+    "name": "Errong Leng",
+    "email": "errong.leng@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lengerrong/react-pdf-editor.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
