--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "name": "react-pdf-editor",
   "version": "1.1.1",
   "type": "module",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
   "keywords": [
     "react",
     "pdf",
@@ -33,6 +27,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "path2d-polyfill": "^2.0.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
